@@ -27,10 +27,10 @@ package sun.reflect;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
-import sun.misc.Unsafe;
+import jdk.internal.misc.Unsafe;
 
 /**
- * Base class for sun.misc.Unsafe-based FieldAccessors for fields with
+ * Base class for jdk.internal.misc.Unsafe-based FieldAccessors for fields with
  * final or volatile qualifiers. These differ from unqualified
  * versions in that (1) they check for read-only status (2) they use
  * the volatile forms of Unsafe get/put methods. (When accessed via
